--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,3 +21,6 @@ jobs:
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
+    - name: Run Tests
+      run: |
+       pytest test_model.py # Run the Tests
