--- a/.github/workflows/Pipeline.yml
+++ b/.github/workflows/Pipeline.yml
@@ -10,48 +10,34 @@ on:
   
     branches:
       - main  # Run on pull requests targeting the main branch
-jobs:
 
-  lint:
+jobs:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2  # Checks out your repository's code
+        uses: actions/checkout@v2
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  # Specify the Python version
+          python-version: '3.9' # Subject to change
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install your project dependencies
-          pip install pylint # Doubly ensure installing pylint occurred
+          pip install -r requirements.txt
+          pip install pylint pytest pre-commit  # Ensuring proper installs
 
-      - name: Analysing the code with pylint
+      - name: Run pre-commit
         run: |
-          pylint $(git ls-files '*.py')
+          pre-commit run --all-files  # Run Pre-Commit hooks
 
-  test:
-    runs-on: ubuntu-latest  # Specify the OS to run the job
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2  # Checks out your repository's code
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'  # Specify the Python version
-
-      - name: Install dependencies
+      - name: Run pylint
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install your project dependencies
-          pip install pytest
-          
-      - name: Run tests
+          pylint $(git ls-files '*.py') #Run Pylint on necessary code (could change to include specified files)
+
+      - name: Run pytest # Runs on successful lint threshold pass
         run: |
-          pytest test_model.py  # Run your tests
+          pytest
